--- a/style.css
+++ b/style.css
@@ -1,8 +1,25 @@
 @import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
 
 
-h2 {
-font-family: Source Sans Pro;
-color: #444;
-font-weight: 300;
+h1, h2, h3, h4, h5, label, p, div {
+  font-family: Source Sans Pro;
+  color: #444;
+  font-weight: 300;
+}
+
+#controls {
+  /* Appearance */
+  background-color: white;
+  padding: 0 20px 20px 20px;
+  cursor: move;
+  /* Fade out while not hovering */
+  opacity: 0.65;
+  zoom: 0.9;
+  transition: opacity 500ms 1s;
+}
+
+#controls:hover {
+  /* Fade in while hovering */
+  opacity: 0.95;
+  transition-delay: 0;
 }
