--- a/libraries/frameworks/io2012/css/slidify.css
+++ b/libraries/frameworks/io2012/css/slidify.css
@@ -352,7 +352,7 @@ pre code {
 }
 
 .title-slide {
-  background-color: #CBE7A5; /* #EDE0CF; ; #CA9F9D*/
+  background-color: #E7E7E7; /* #EDE0CF; ; #CA9F9D*/
   /* background-image:url(http://goo.gl/EpXln); */
 }
 
@@ -362,7 +362,7 @@ pre code {
 
 .title-slide hgroup > h1, 
 .title-slide hgroup > h2 {
-  color: #535E43 ;  /* ; #EF5150*/
+  color: #721919 ;  /* ; #EF5150*/
 }
 
 
