Change title slide background

--- a/libraries/frameworks/io2012/css/slidify.css
+++ b/libraries/frameworks/io2012/css/slidify.css
@@ -352,7 +352,7 @@ pre code {
 }
 
 .title-slide {
-  background-color: #E7E7E7; /* #EDE0CF; ; #CA9F9D*/
+  background-color: #cfcfcf; /* #EDE0CF; ; #CA9F9D*/
   /* background-image:url(http://goo.gl/EpXln); */
 }
 
